# matmaster-Mr-dice

./: .gitignore  README.md  USAGE.md  bohrium_setup_env.sh  export_prod_env.sh  export_test_env.sh  export_uat_env.sh  pyproject.toml  quota_test.py  start_all.sh  thoughts.md  uv_setup.sh
database/bohriumpublic_database/Bohriumpublic_Agent/: agent.py
database/bohriumpublic_database/Bohriumpublic_Server/: utils.py
database/bohriumpublic_database/bohriumpublic_test/: server.py  test_server.py  utils.py
database/mofdbsql_database/: deploy.sh
database/mofdbsql_database/Mofdb_Server/: server.py  utils.py
database/mofdbsql_database/mofdb_test/: test.py  test_server.py  utils.py
database/openlam_database/Openlam_Server/: utils.py
database/openlam_database/openlam/: requirement.txt
database/openlam_database/openlam_test/: test.py  test_server.py  utils.py
database/optimade_database/: README.md  demo.txt
database/optimade_database/Optimade_Server/: environment.yml  nohup.out  requirements.txt  server.py  utils.py
database/optimade_database/optimade_test/: README.MD  utils.py  utils0.py
mrdice_server/: __init__.py  agent.py  config.py  debug_server.py  llm_client.py  llm_expand.py  ranker.py  router.py  schema.py  server.py
mrdice_server/core/: __init__.py  config.py  error.py  logger.py  postprocessor.py  preprocessor.py  prompt.py  server.py
mrdice_server/database/bohriumpublic_database/: constant.py  utils.py
mrdice_server/database/mofdbsql_database/: MOFdb_SQL_vs_Traditional_Comparison.md  constant.py  utils.py
mrdice_server/database/openlam_database/: constant.py  test.py  utils.py
mrdice_server/database/optimade_database/: .gitignore  constant.py  utils.py
mrdice_server/models/: __init__.py  schema.py
mrdice_server/retrievers/: README.md  __init__.py  base.py  bohriumpublic.py  mofdbsql.py  openlam.py  optimade.py
mrdice_server/search/: __init__.py  router.py  searcher.py
scripts/: openlam_cli.py
tests/: __init__.py  test_llm.py  test_mcp_remote.py  test_mrdice_example.py  test_server.py
(+258 files in other folders)
